[package]
name = "benutzerverwaltungstool"
version = "0.2.0"
edition = "2021"
description = "Program um die Benutzer der Fachschaft Informatik zu verwalten"
authors = ["Florian Schubert"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.25.1", features = ["full"] }
oauth2 =  { version = "4.4.1" }
thiserror = "1.0.43"
log = "0.4.19"
env_logger = "0.10.0"
serde_with = {version="3.0.0", features=["alloc", "macros", "std", "json"]}
clap = { version = "4.1.11", features = ["derive", "color"] }
anyhow = "1"
gitlab = "0"

[profile.release]
log = "info"
